docs/2021.3.1/_sources/license_setup.rst.txt
.. :tocdepth: 3

.. _license_setup:

Setup SmartHLS License
==================================

Please follow the below instructions to generate and install SmartHLS tool license:

#.  Log into `Microchip Direct > FPGA Software and IP Core Products
    <https://www.microchipdirect.com/fpga-software-products?_ga=2.64389999.1724603044.1642798569-550376685.1606760895>`_.
#.  Click on the "Request Free License" button on the right.

   .. image:: /images/license_screenshot_request.png
        :align: center

#.  Click "Register" beside either the "SmartHLS 1 Year Node Locked License for
    Windows" or "SmartHLS 1 Year Floating License for Windows or Linux Server".

   .. image:: /images/license_screenshot_register.png
        :align: center

#.  On the next page, enter the hard Disk ID (for node locked license) or MAC ID (for
    floating license) of the machine based on the selected license option and click on
    the "Submit" button. You will then be emailed a new ``license.dat`` license
    file enabling you to use SmartHLS.
#.  Open the SmartHLS ``license.dat`` file and copy the contents into your
    existing Libero software license file with the same Libero license option
    (Disk ID or MAC ID). For example, if you generated a node locked license for
    the SmartHLS tool, you need to add the SmartHLS license file contents into the
    Libero node locked license file.
#.  Double check that your ``LM_LICENSE_FILE`` environment variable is set correctly.
    
Note: If you have not yet installed the license for the Libero Design Suite Software, refer to
https://www.microchip.com/en-us/products/fpgas-and-plds/fpga-and-soc-design-tools/fpga/licensing or
your Libero license file email for instructions on how to download and install
your Libero license and software.

